# react-native-rapidsnark

./: .gitignore  .npmignore  CHANGELOG.MD  CONTRIBUTING.md  COPYING  LICENSE  LICENSE-MIT  README.md  package-lock.json  package.json  react-native-rapidsnark.podspec  tsconfig.json
.github/workflows/: npm-publish.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/cpp/: CMakeLists.txt  rapidsnark_module.cpp  rapidsnark_module.h
circuits/: README.md  package.json
circuits/circuits/: input.json
circuits/scripts/: build.sh  copy_to_example.sh
cpp/: react-native-rapidsnark.cpp  react-native-rapidsnark.h
example/: README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json  verification_key.json  witness.wtns
example/android/: build.gradle  settings.gradle
example/assets/: copy_assets.sh
example/circuits/: circuit.circom  package-lock.json
example/ios/: File.swift  Podfile  authV2.wtns  authV2_verification_key.json  verification_key.json  witness.wasm  witness.wtns
example/scripts/: copy_assets.sh
example/src/: App.tsx  verification_key.json
ios/: Rapidsnark-Bridging-Header.h  Rapidsnark.h  Rapidsnark.mm  RapidsnarkFramework.h  RapidsnarkProxy.swift
ios/Rapidsnark.xcodeproj/: project.pbxproj
ios_framework/: build_xcframework_merged.sh  build_xcframeworks.sh
ios_framework/Rapidsnark.xcframework/: Info.plist
ios_framework/Rapidsnark.xcodeproj/: project.pbxproj
ios_xcframework/: build_xcframework_merged.sh
src/: NativeRapidsnark.ts  index.ts  index.tsx
(+60 files in other folders)
